@@ -42,3 +42,7 @@ end
 When(/^I click the image button using src$/) do
   @page.button_image_src
 end
+
+When(/^I click the image button using alt$/) do
+  @page.button_image_alt
+end
