@@ -1,6 +1,7 @@
 === 2016-08-03
 * Enhancements
   * Added ability to find image buttons by src
+  * Added ability to find image buttons by alt
 === 2016-08-02
 * Enhancements
   * Added all of the h5 locators
